# life

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: cell.frag  cell.vert
include/: life.h
include/life/: archive.h  cell.h  composite_archive.h  device.h  fixed_step_service.h  folder_archive.h  game_window.h  gametime.h  hardware_buffer.h  input_handler.h  kernel.h  logger.h  opengl_error_handler.h  resource.h  scene.h  sdl_istream_adapter.h  service.h  shader.h  texture.h
src/: CMakeLists.txt  main.cpp
src/life/: CMakeLists.txt  cell.cpp  composite_archive.cpp  device.cpp  fixed_step_service.cpp  folder_archive.cpp  game_window.cpp  gametime.cpp  hardware_buffer.cpp  input_handler.cpp  kernel.cpp  logger.cpp  opengl_error_handler.cpp  resource.cpp  scene.cpp  sdl_istream_adapter.cpp  shader.cpp  texture.cpp
test/: CMakeLists.txt  test.cpp
test/life/: composite_archive_tests.cpp  fixed_step_service_tests.cpp  folder_archive_tests.cpp  gametime_tests.cpp  kernel_tests.cpp
